--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,23 @@ runs/
 z1010_cad.tar.gz
 
 z1010/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
