[Script] Created Script to Visualize Results
I needed to create a visualization of the results for a presentation.
Stored the script in the repository for anyone who wants to visualize
the results quickly.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ version = {attr = "fpga_timing_benchmarks.__version__"}
 lint = [
     "flake8 == 7.3.0"
 ]
+vis_scripts = [
+    "pandas>=2.0.0",
+    "matplotlib>=3.6.0",
+]
 
 [tool.setuptools]
 include-package-data = true
