--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -43,3 +43,20 @@ jobs:
         run: |
           tclfmt --check .
           tclint .
+
+  spelling:
+    name: Check Spelling
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v5
+
+      - name: Install Requirements
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install .[lint]
+
+      - name: Check Spelling
+        run: codespell
